Prepare for ghpages

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/css/vinzeGallery.css">
-    <script src="../src/js/vinzeUtilities.js"></script>
-    <script src="../src/js/vinzeGallery.js"></script>
+    <link rel="stylesheet" href="src/css/vinzeGallery.css">
+    <script src="src/js/vinzeUtilities.js"></script>
+    <script src="src/js/vinzeGallery.js"></script>
     <style type="text/css">
         * {
             margin: 0;
@@ -31,16 +31,16 @@
 
     <div data-vinze-gallery="test">
         <div data-vinze-photo-container>
-            <img data-vinze-photo src="img/1.jpg" />
+            <img data-vinze-photo src="src/img/1.jpg" />
         </div>
         <div data-vinze-photo-container>
-            <img data-vinze-photo src="img/2.jpg" />
+            <img data-vinze-photo src="src/img/2.jpg" />
         </div>
         <div data-vinze-photo-container>
-            <img data-vinze-photo src="img/3.jpg" />
+            <img data-vinze-photo src="src/img/3.jpg" />
         </div>
         <div data-vinze-photo-container>
-            <img data-vinze-photo src="img/4.jpg" />
+            <img data-vinze-photo src="src/img/4.jpg" />
         </div>
     </div>
 
@@ -48,19 +48,19 @@
 
     <div data-vinze-gallery="test2">
         <div data-vinze-photo-container>
-            <img data-vinze-photo src="img/5.jpg" />
+            <img data-vinze-photo src="src/img/5.jpg" />
         </div>
         <div data-vinze-photo-container>
-            <img data-vinze-photo src="img/6.jpg" />
+            <img data-vinze-photo src="src/img/6.jpg" />
         </div>
         <div data-vinze-photo-container>
-            <img data-vinze-photo src="img/7.jpg" />
+            <img data-vinze-photo src="src/img/7.jpg" />
         </div>
         <div data-vinze-photo-container>
-            <img data-vinze-photo src="img/8.jpg" />
+            <img data-vinze-photo src="src/img/8.jpg" />
         </div>
         <div data-vinze-photo-container>
-            <img data-vinze-photo src="img/9.jpg" />
+            <img data-vinze-photo src="src/img/9.jpg" />
         </div>
     </div>
 
