--- a/index.html
+++ b/index.html
@@ -4,23 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+
+    <!-- Gallery + Vinze Utilities -->
+
     <link rel="stylesheet" href="src/css/vinzeGallery.css">
-    <script src="src/js/vinzeUtilities.js"></script>
-    <script src="src/js/vinzeGallery.js"></script>
+    <!-- <script src="src/js/vinzeUtilities.js"></script>
+    <script src="src/js/vinzeGallery.js"></script> -->
+
+    <!-- DEV -->
+
+    <script type="module" src="src/js/vinzeGallery/vinzeGallery_dev.js"></script>
+
     <style type="text/css">
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
 
         body {
             background-color: #000;
+            width: 100%;
+            height: 100%;
         }
 
         h3 {
-            padding: 15px 0;
+            padding: 30px;
+            margin: 0 0 30px 0;
+            width: 100%;
+            border-bottom: 1px solid rgb(60, 60, 60);
             color: #fff;
+        }
+
+        [data-vinze-gallery] {
+            justify-content: center;
+        }
+
+        [data-vinze-gallery] [data-vinze-photo-container] {
+            width: 25vw;
+            min-width: 150px;
+            max-width: 350px;
+        }
+
+        @media (min-width: 401px) {
+            [data-vinze-gallery] {
+                justify-content: left;
+            }
         }
     </style>
     <title>Vinze Gallery Demo</title>
@@ -64,20 +97,32 @@
         </div>
     </div>
 
+    <!-- DEV -->
+    <script type="module" src="src/js/index.js"></script>
+
     <script type="text/javascript">
 
-        // If the first parameter is null - initialize all found galleries by data attr.
-        // The first parameter also can be a string with a specific name of the gallery.
+        // // If the first parameter is null / undefined - initialize all found galleries by data attr.
+        // // The first parameter also can be a string with a specific name of the gallery.
 
-        let gallery = new VinzeGallery(null, {
-            gallery: {
-                photosGap: 5,
-            },
-        });
+        // let gallery = new VinzeGallery("test", {
+        //     gallery: {
+        //         photosGap: 5,
+        //     },
+        // });
 
-        // !!! Initialize.
+        // // !!! Initialize.
 
-        gallery.init();
+        // gallery.init();
+
+        // let gallery2 = new VinzeGallery("test2", {
+        //     gallery: {
+        //         photosGap: 5,
+        //         smoothLoadTick: 400,
+        //     },
+        // });
+
+        // gallery2.init();
     </script>
 
 </body>
